Javascript tweaks for toggling sliders

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <h3>Denoising Strength &middot; <span id="spanDenoise">None</span></h3>
           <div class="slidecontainer">
-            <input type="range" min="1" max="100" value="0" class="slider" id="sliderDenoise">
+            <input type="range" min="1" max="100" value="0" class="slider" id="sliderDenoise" disabled="true">
           </div>
         </div>
 
@@ -59,7 +59,7 @@
 
           <h3>Enhancement Strength &middot; <span id="spanStar">None</span></h3>
           <div class="slidecontainer">
-            <input type="range" min="1" max="100" value="0" class="slider" id="sliderStar">
+            <input type="range" min="1" max="100" value="0" class="slider" id="sliderStar" disabled="true">
           </div>
         </div>
       </div>
